--- a/contact/index.html
+++ b/contact/index.html
@@ -6,7 +6,7 @@ research: passive
 software: passive
 cv: passive
 contact: active
-description: Contact | Alejandra López Villegas
+description: Contact | Caleb Lucas
 ---
 <div class="contact">
 
@@ -14,21 +14,10 @@ description: Contact | Alejandra López Villegas
 	<br />
 	</div>
 
-	<p><b>Office:</b></p>
-	
-	<ul class="list-unstyled">
-	<li>Alejandra López Villegas</li>
-	<li>368 Farm Ln, 234</li>
-	<li>East Lansing, MI 48824</li>
-	</ul>
-
 	<p><b>Email:</b></p>
 	
 	<ul class="list-unstyled">
-	<li><span class="obfuscate">ude.usm@7ivzepol</span></li>
+	<li><span class="obfuscate">ym ta elbaliava si liame yM</span><a href="https://www.rand.org/about/people/l/lucas_caleb.html"> RAND webpage</a></li>
 	</ul>
 	
-	<p><b>Twitter:</b></p>
-	
-	<a href="https://twitter.com/alelov1" class="twitter-follow-button" data-show-count="false">Follow @alelov1</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </div>
