--- a/about/index.html
+++ b/about/index.html
@@ -1,12 +1,12 @@
 ---
 layout: default
 title: About This Site
-description: Credits and information about the website alejandralopezvillegas.com
+description: Credits and information about the website caleblucas.com
 ---
 
   <div class="about">
     
-    <p>alejandralopezvillegas.com is:</p>
+    <p>caleblucas.com is:</p>
     
       <ul class="list-unstyled">
         <li>Licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/deed.en_US">Creative Commons Attribution 3.0 Unported License</a>. </li>
